--- a/second.html
+++ b/second.html
@@ -10,6 +10,9 @@
     body{
       background: url(f-back.jpg);
       background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+
     }
   </style>
 </head>
@@ -24,7 +27,7 @@ Friends!
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="f1.jpg" class="d-block w-100 img-thumbnail img-fluid" alt="We3">
+      <img src="f5.jpg" class="d-block w-100 img-thumbnail img-fluid" alt="We3">
     </div>
     <div class="carousel-item">
       <img src="f4.jpg" class="d-block w-100 img-thumbnail img-fluid" alt="We5" height="900vh" width="1000vh">
