--- a/second.html
+++ b/second.html
@@ -34,6 +34,9 @@ Friends!
     </div>
     <div class="carousel-item">
       <img src="f3.jpg" class="d-block w-100 img-thumbnail img-fluid" alt="The-complete-squad" height="900vh" width="1000vh">
+     </div>
+    <div class="carousel-item">
+      <img src="f6.jpeg" class="d-block w-100 img-thumbnail img-fluid" alt="The-complete-squad" height="900vh" width="1000vh">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
