First(index.html) page updated.

--- a/index.html
+++ b/index.html
@@ -9,23 +9,38 @@
   <title>Document</title>
 </head>
 <body>
+<div class="container">
 <h1 class="hero display-1">MEMORIES!!!!</h1>
 <h2 class="tit">We didn't realise we were making memories...</h2>
-<div class="container">
-  <a href="second.html"><img class="img-fluid img-thumbnail" src="fnd.jpg" alt="click me!" height=35% width=30%></a>
-  <p class="para">friends is a defvkjkfjk</p>
-</div>
-<div class="container">
-  <a href="third.html"> <img class="img-fluid img-thumbnail" src="trip.jpg" alt="" height=35% width=30%></a>
+<div class="container row rowheight justify-content-md-center">
+  <div class="col-md-6 col-md-auto">
+  <a href="second.html"><img class="img-fluid img-thumbnail" src="frnd.jpg" alt="click me!" height=70% width=60%></a>
+  <p class="para1">friends' till the end!!!</p>
+  </div>
+
+  <div class="col-md-6 col-md-auto">
+  <a href="third.html"> <img class="img-fluid img-thumbnail" src="tour.jpg" alt="" height=70% width=60%></a>
+  <p class="para2">Take trips, leave footprints!!!</p>
+  </div>
 </div>
 <br>
-<div class="container">
-  <a href="third.html"> <img class="img-fluid img-thumbnail" src="trip.jpg" alt="" height=35% width=30%></a>
+<div class="row rowheight1">
+
 </div>
 <br>
-<aside class="container45">
-  <a href="third.html"> <img class="img-fluid img-thumbnail" src="trip.jpg" alt="" height=35% width=30%></a>
-</aside>
+<div class="container row rowheight justify-content-md-center">
+  <div class="col-md-6 col-md-auto">
+  <a href="fourth.html"> <img class="img-fluid img-thumbnail" src="cele.jpg" alt="" height=70% width=60%></a>
+  <p class="para1"> Celebrate each moment!!!</p>
+  </div>
+
+  <div class="col-md-6 col-md-auto">
+  <a href="fifth.html"> <img class="img-fluid img-thumbnail" src="clg.jpg" alt="" height=70% width=60%></a>
+  <p class="para2">Campus+ late night studies=best combo!!</p>
+  </div>
+</div>
+</div>
+
 
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
