Celebration page updated.

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   </div>
 
   <div class="col-md-6 col-md-auto">
-  <a href="fifth.html"> <img class="img-fluid img-thumbnail" src="clg.jpg" alt="" height=70% width=60%></a>
-  <p class="para2">Campus+ late night studies=best combo!!</p>
+  <a href="fifth.html"> <img class="img-fluid img-thumbnail" src="fun.jpg" alt="" height=70% width=60%></a>
+  <p class="para2">Unlimitied Fun + Indelibal Moments!!!</p>
   </div>
 </div>
 </div>
