--- a/fourth.html
+++ b/fourth.html
@@ -8,7 +8,7 @@
   <title>Celebrations!!!</title>
   <style>
     body{
-      background: url(f-back.jpg);
+      background: url(c-back.jpg);
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
